# vouch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_profile.md
.github/workflows/: ci.yml  release.yml
curio/: __init__.py  _lang.py  _llm.py  catalog.py  cli.py  config.py  dns_resolver.py  engine.py  exceptions.py  models.py  server.py
curio/adapters/: __init__.py  base.py  browser.py  http.py  stealth.py
curio/captcha/: solver.py
curio/discovery/: __init__.py  cache.py  humanize.py  probe.py  search_bar.py
curio/extraction/: css_selectors.py  llm.py  llm_extract.py  pdf.py  trafilatura.py
curio/integrations/: __init__.py  _common.py  crewai.py  langchain.py  mcp.py  pydantic_ai.py
curio/monitor/: __init__.py  notify.py  watcher.py
curio/profiles/: __init__.py  builtin.yaml  registry.py
curio/router/: base.py  embedding_router.py  llm_router.py  tag_router.py
docs/: plugins.md
examples/: analysis_draft.md  sites.example.yaml  test_18_v2.py  test_20_queries.py  test_30_queries_v2.py  test_90_queries.py  test_captcha_compare.py  test_captcha_vision.py  test_llm_extract_quality.py  test_smoke_v2.py  test_v2_final.py
farol/: __init__.py  _llm.py  cli.py  config.py  dns_resolver.py  engine.py  exceptions.py  plugins.py  server.py
farol/adapters/: __init__.py  browser.py  browser_pool.py  http.py  stealth.py
farol/captcha/: __init__.py  solver.py  tesseract.py
farol/discovery/: probe.py  search_bar.py
farol/extraction/: css_selectors.py  llm_extract.py  pdf.py
farol/integrations/: __init__.py  _common.py  crewai.py  langchain.py  mcp.py  pydantic_ai.py
farol/monitor/: notify.py  watcher.py
farol/profiles/: __init__.py  builtin.yaml  registry.py  update.py
farol/router/: embedding_router.py  llm_router.py
test-cache-30v2/: results.json
tests/: conftest.py  test_async.py  test_cache.py  test_captcha.py  test_catalog.py  test_cli.py  test_css_selectors.py  test_dns_resolver.py  test_engine.py  test_extraction.py  test_extraction_e2e.py  test_lang.py  test_llm_extract.py  test_models.py  test_plugins.py  test_profiles.py  test_profiles_update.py  test_quality_detector.py  test_result_formatters.py  test_router.py
tests/fixtures/: __init__.py  arxiv_search.html
vouch/: __init__.py  _lang.py  _llm.py  catalog.py  cli.py  config.py  dns_resolver.py  engine.py  exceptions.py  plugins.py  server.py
vouch/adapters/: __init__.py  browser.py  browser_pool.py  http.py  stealth.py
vouch/captcha/: __init__.py  solver.py  tesseract.py
vouch/discovery/: cache.py  humanize.py  probe.py  search_bar.py
vouch/extraction/: __init__.py  css_selectors.py  llm_extract.py  pdf.py
vouch/integrations/: __init__.py  _common.py  crewai.py  langchain.py  mcp.py  pydantic_ai.py
vouch/monitor/: notify.py  watcher.py
vouch/profiles/: __init__.py  builtin.yaml  registry.py  update.py
vouch/router/: __init__.py  all_router.py  embedding_router.py  llm_router.py
