[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "curio"
version = "0.1.0"
description = "Curated AI search for agents — bring your own sources, your own LLM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "curio contributors" }]
keywords = ["search", "agents", "llm", "browser", "automation", "rag", "tavily", "perplexity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.6",
    "litellm>=1.40",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tenacity>=8.2",
    "tldextract>=5.1",
    "lxml>=5.0",
    "cssselect>=1.2",
]

[project.optional-dependencies]
browser = ["playwright>=1.45"]
stealth = ["patchright>=1.45"]
vision = ["Pillow>=10.0"]
monitor = ["apscheduler>=3.10", "apprise>=1.8"]
server = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "jinja2>=3.1"]
mcp = ["mcp>=0.9"]
embedding = ["sentence-transformers>=3.0", "numpy>=1.26"]
pdf = ["pypdf>=4.3"]
crewai = ["crewai>=0.55"]
langchain = ["langchain-core>=0.2"]
pydantic-ai = ["pydantic-ai>=0.0.13"]
all = [
    "playwright>=1.45",
    "patchright>=1.45",
    "Pillow>=10.0",
    "apscheduler>=3.10",
    "apprise>=1.8",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "mcp>=0.9",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "pypdf>=4.3",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/yourhandle/curio"
Repository = "https://github.com/yourhandle/curio"
Issues = "https://github.com/yourhandle/curio/issues"

[project.scripts]
curio = "curio.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["curio"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
